--- a/redux-intro/src/index.scss
+++ b/redux-intro/src/index.scss
@@ -5,7 +5,11 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(3deg, rgba(96,223,230,1) 0%, rgba(215,238,230,1) 70%);
+  background: linear-gradient(
+    3deg,
+    rgba(96, 223, 230, 1) 0%,
+    rgba(215, 238, 230, 1) 70%
+  );
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,31 +28,49 @@ a:hover {
 
 body {
   margin: 0;
+  margin-right: 10%;
   display: flex;
-  // place-items:initial;
-  
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+  color: #191919;
+}
+
+.input,
+.listmenu {
+  width: 12.5rem;
+  height: 1.5625rem;
+  margin: 0.1875rem 0;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+  background-color: #ffffff;
+  color: #191919;
+  font-size: 0.8rem;
+  font-weight: 600;
+  border-style: none;
+  border-radius: 0.9375rem;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+  border-style: none;
+  border-radius: 0.9375rem;
+  padding: 0.6em;
+  font-size: 0.8rem;
+  font-weight: 600;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #ffffff;
+  color: #191919;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: rgba(96, 223, 230, 1);
 }
 button:focus,
 button:focus-visible {
