--- a/redux-intro/src/components/Register/Register.style.scss
+++ b/redux-intro/src/components/Register/Register.style.scss
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+}
+
 .button-container {
   margin-top: 1.25rem;
 
@@ -9,7 +15,6 @@
 
 .experiencia-container {
   display: flex;
-  // max-width: 5rem;
 
   &__input {
     max-width: 8.875rem;
@@ -24,5 +29,11 @@
     font-weight: 600;
     border-style: none;
     border-radius: 0.9375rem;
+  }
+
+  &__button {
+    height: 1.7625rem;
+    margin: 0.1875rem 0;
+    line-height: 0.625rem;
   }
 }
