--- a/redux-intro/src/index.scss
+++ b/redux-intro/src/index.scss
@@ -7,8 +7,8 @@
   color: rgba(255, 255, 255, 0.87);
   background: linear-gradient(
     3deg,
-    rgba(96, 223, 230, 1) 0%,
-    rgba(215, 238, 230, 1) 70%
+    #E99C5D 0%,
+    #75A5C5 100%
   );
 
   font-synthesis: none;
