--- a/redux-intro/src/components/Profile/Profile.css
+++ b/redux-intro/src/components/Profile/Profile.css
@@ -53,3 +53,10 @@
   .margin-top{
     margin-top: 5%;
   }
+  .slider{
+    max-width: 100%;
+  }
+  .imgh2{
+    margin-bottom: -120px;
+    width: 100%;
+  }
