--- a/redux-intro/src/index.scss
+++ b/redux-intro/src/index.scss
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(3deg, #e99c5d 0%, #75a5c5 100%);
+  background: linear-gradient(3deg, #e99c5d 0%, #314048 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
