corregido perfil empresas

--- a/redux-intro/src/App.scss
+++ b/redux-intro/src/App.scss
@@ -6,8 +6,9 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  width: 15em;
+  height: 15em;
+  // padding: 1em;
   will-change: filter;
   transition: filter 300ms;
 }
