--- a/redux-intro/src/components/Profile/Profile.style.scss
+++ b/redux-intro/src/components/Profile/Profile.style.scss
@@ -10,3 +10,9 @@
 .margin-top-none {
   margin-top: 0 !important;
 }
+
+.slider-h2 {
+  width: 100%;
+  margin-top: -7.5rem;
+  margin-bottom: -7.5rem;
+}
