--- a/redux-intro/src/components/Profile/Profile.css
+++ b/redux-intro/src/components/Profile/Profile.css
@@ -57,6 +57,7 @@
     max-width: 100%;
   }
   .imgh2{
-    margin-bottom: -120px;
+    margin-bottom: -7.5rem;
+    margin-top: -7.5rem;
     width: 100%;
   }
