--- a/redux-intro/src/index.scss
+++ b/redux-intro/src/index.scss
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Outfit", sans-serif;
   line-height: 1.5;
   font-weight: 400;
   margin-top: -3rem;
